2005-08-10  Lluis Sanchez Gual  <lluis@novell.com>

	* Services/NUnitService.cs:
	* Gui/UnitTestOptionsDialog.cs: Track changes in TreeViewOptions.

2005-08-10  Ben Motmans  <ben.motmans@gmail.com>

	* MonoDevelop.NUnit.mdp: references update

2005-08-09  Lluis Sanchez Gual  <lluis@novell.com>

	* Services/NUnitProjectTestSuite.cs: Use the new IParserContext API.

2005-08-03  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/TestPad.cs:
	* Gui/TestResultsPad.cs: Use the new command service to show
	context menus.

2005-07-27  Lluis Sanchez Gual  <lluis@novell.com> 

	* Project/NUnitAssemblyGroupProject.cs: Track api changes.

2005-07-13  Lluis Sanchez Gual  <lluis@novell.com> 

	* New addin implementation.

2005-03-16  John Luke  <john.luke@gmail.com>

	* Redo the nunit addin based on gnunit