@@ -49,57 +49,40 @@ Services/IResultsStore.cs \
 Services/UnitTestResultsStore.cs \
 Services/XmlResultsStore.cs
 
-TEMPLATES = \
-templates/NUnitAssemblyGroup.xpt.xml
-
-RES = -resource:$(srcdir)/Gui/NUnit.Running.png \
-	-resource:$(srcdir)/Gui/NUnit.Failed.png \
-	-resource:$(srcdir)/Gui/NUnit.SuccessAndFailed.png \
-	-resource:$(srcdir)/Gui/NUnit.None.png \
-	-resource:$(srcdir)/Gui/NUnit.NotRun.png \
-	-resource:$(srcdir)/Gui/NUnit.Loading.png \
-	-resource:$(srcdir)/Gui/NUnit.Success.png \
-	-resource:$(srcdir)/nunit.glade
+RES = \
+nunit.glade \
+templates/NUnitAssemblyGroup.xpt.xml \
+Gui/NUnit.Running.png \
+Gui/NUnit.Failed.png \
+Gui/NUnit.SuccessAndFailed.png \
+Gui/NUnit.None.png \
+Gui/NUnit.NotRun.png \
+Gui/NUnit.Loading.png \
+Gui/NUnit.Success.png
 
 ADDIN = MonoDevelopNUnit.addin.xml
 
-TEMPLATES_DIR = $(ADDIN_BUILD)/templates
-
-build_TEMPLATES = $(addprefix $(TEMPLATES_DIR)/, $(notdir $(TEMPLATES)))
-
-src_TEMPLATES = $(addprefix $(srcdir)/, $(TEMPLATES))
-
 if ENABLE_NUNIT
-all: $(ASSEMBLY) $(ADDIN_BUILD)/$(ADDIN) $(build_TEMPLATES)
+all: $(ASSEMBLY) $(ADDIN_BUILD)/$(ADDIN)
 else
 all:
 endif
-
-$(filter %.xft.xml, $(build_TEMPLATES)): $(TEMPLATES_DIR)/%.xft.xml: $(srcdir)/templates/%.xft.xml
-	mkdir -p $(TEMPLATES_DIR)
-	cp $(srcdir)/templates/$(notdir $@) $@
-
-$(filter %.xpt.xml, $(build_TEMPLATES)): $(TEMPLATES_DIR)/%.xpt.xml: $(srcdir)/templates/%.xpt.xml
-	mkdir -p $(TEMPLATES_DIR)
-	cp $(srcdir)/templates/$(notdir $@) $@
 
 $(ADDIN_BUILD)/$(ADDIN): $(srcdir)/$(ADDIN)
 	mkdir -p $(ADDIN_BUILD)
 	cp $(srcdir)/$(ADDIN) $(ADDIN_BUILD)/.
 
-$(ASSEMBLY): $(FILES) $(srcdir)/nunit.glade
+$(ASSEMBLY): $(FILES) $(RES)
 	mkdir -p $(ADDIN_BUILD)
-	$(CSC) $(CSC_FLAGS) $(DLLS) $(RES) $(build_sources) -out:$@ -target:library
+	$(CSC) $(CSC_FLAGS) $(DLLS) $(RES:%=/resource:%) $(build_sources) -out:$@ -target:library
 
 if ENABLE_NUNIT
 assemblydir = $(MD_ADDIN_DIR)/NUnit
 assembly_DATA = $(ASSEMBLY) $(ADDIN)
 
-templatedir = $(assemblydir)/templates
-template_DATA = $(TEMPLATES)
 endif
 
 CLEANFILES = $(ASSEMBLY) $(ASSEMBLY).mdb
-EXTRA_DIST = $(FILES) nunit.glade $(ADDIN) $(TEMPLATES)
+EXTRA_DIST = $(FILES) $(ADDIN) $(RES)
 
 include $(top_srcdir)/Makefile.include
