@@ -1,3 +1,12 @@
+2005-08-12  Lluis Sanchez Gual  <lluis@novell.com> 
+
+	* templates/*:
+	* MonoDevelopNUnit.addin.xml: Properly reference resource icons and
+	templates.
+	* Makefile.am: Embed icon and templates as resources.
+	* Gui/NUnitAssemblyGroupConfigurationNodeBuilder.cs: Track changes in
+	the Stock class.
+
 2005-08-10  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* Services/NUnitService.cs:
